optimize badge for store-description

--- a/Resources/store/de.html
+++ b/Resources/store/de.html
@@ -4,7 +4,7 @@
 </p>
 
 <p>
-    <a href="https://github.com/FriendsOfShopware/FroshMailArchive" target="_blank"><img src="https://img.shields.io/badge/Github-FroshMailArchive-green.svg"></a>
+    <a href="https://github.com/FriendsOfShopware/FroshMailArchive" target="_blank" style="display: inline-block;"><img src="https://img.shields.io/badge/Github-FroshMailArchive-green.svg"></a><br>
     Dieses Plugin wird von <a href="https://store.shopware.com/friends-of-shopware.html" target="_blank">@FriendsOfShopware</a> entwickelt.
     Maintainer dieses Plugins ist: <a href="https://github.com/tinect" target="_blank">Sebastian König</a>
 </p>
