--- a/Resources/store/en.html
+++ b/Resources/store/en.html
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-    <a href="https://github.com/FriendsOfShopware/FroshMailArchive" target="_blank"><img src="https://img.shields.io/badge/Github-FroshMailArchive-green.svg"></a>
+    <a href="https://github.com/FriendsOfShopware/FroshMailArchive" target="_blank" style="display: inline-block;"><img src="https://img.shields.io/badge/Github-FroshMailArchive-green.svg"></a><br>
     This plugin is part of <a href="https://store.shopware.com/en/friends-of-shopware.html" target="_blank">@FriendsOfShopware</a>.
     Maintainer from the plugin is: <a href="https://github.com/tinect" target="_blank">Sebastian König</a>
 </p>
